--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -3,7 +3,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 130px;
-  background-image: linear-gradient(0deg, transparent, var(--backgroundColor) 70%);
+  background-image: linear-gradient(0deg, transparent, #0a0a0a 70%);
   pointer-events: none;
   z-index: 9998;
   opacity: 0;
@@ -34,6 +34,7 @@
   align-items: end;
 }
 .header ul li {
+  font-family: 'Inter', sans-serif;
   letter-spacing: 1px;
   color: #ccc;
   font-weight: 600;
@@ -52,8 +53,10 @@
   font-size: 15px;
   letter-spacing: 1px;
   font-weight: 500;
+  font-family: 'Inter', sans-serif;
 }
 .navbar-title {
+  font-family: 'Courier New', Courier, monospace;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.2px;
